# OaStatWeb3

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  config-mysql.js  config-scgi-example.js  config.js
docker/: Dockerfile
src/: Bases.hpp  OaStatWeb3.cpp  OaStatWeb3.hpp  OpenArenaConverters.cpp  OpenArenaConverters.hpp  OutputterBasic.cpp  OutputterBasic.hpp  OutputterCtemplate.cpp  OutputterCtemplate.hpp  main.cpp  plotgenerator.cpp  plotgenerator.hpp
static_media/: oastat_common.js  oastat_d3charts.js  oastat_formatters.js
templates/: body.tpl  map.tpl  player.tpl  summary.tpl
